RESOLVED FIXED213388
functionCpuClflush checks that the second argument is Int32 but it actually expects it to be UInt32
https://bugs.webkit.org/show_bug.cgi?id=213388
Summary functionCpuClflush checks that the second argument is Int32 but it actually e...
Tuomas Karkkainen
Reported 2020-06-19 10:28:14 PDT
currently it crashes if the second argument is a negative Int32
Attachments
proposed patch (1.29 KB, patch)
2020-06-19 10:32 PDT, Tuomas Karkkainen
no flags
Tuomas Karkkainen
Comment 1 2020-06-19 10:32:24 PDT
Created attachment 402292 [details] proposed patch
EWS
Comment 2 2020-06-19 11:07:20 PDT
Committed r263277: <https://trac.webkit.org/changeset/263277> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402292 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-19 11:08:17 PDT
Note You need to log in before you can comment on or make changes to this bug.