functionCpuClflush checks that the second argument is Int32 but it actually expects it to be UInt32 https://bugs.webkit.org/show_bug.cgi?id=213388

Patch by Tuomas Karkkainen <tuomas.webkit@apple.com> on 2020-06-19
Reviewed by Saam Barati.

This changes the check from isInt32() to isUInt32() so that the logic is consistent.

* tools/JSDollarVM.cpp:

Canonical link: https://commits.webkit.org/226186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263277 268f45cc-cd09-0410-ab3c-d52691b4dbfc